k/dev/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ts-dev-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`code.{dom:.+}`)
      services:
        - name: code-server
          port: 8888
      middlewares:
        - name: traefik-forward-auth-dex@kubernetescrd
  tls:
    secretName: default-certificate
